Fix spacing issue .o-main--split SMCO01-329

--- a/wp-content/themes/hot97/assets/styles/theme/twentytwentyone/assets/sass/07-utilities/measure.scss
+++ b/wp-content/themes/hot97/assets/styles/theme/twentytwentyone/assets/sass/07-utilities/measure.scss
@@ -1,11 +1,11 @@
 // Measure
 // - The width of a line of text, in characters, is known as its measure.
 
-header *,
-main *,
-footer * {
-	max-width: var(--global--spacing-measure);
-}
+// header *,
+// main *,
+// footer * {
+// 	max-width: var(--global--spacing-measure);
+// }
 
 html,
 body,
